# Battleships

./: .gitignore  README.md  main.py  pyproject.toml
gameserver/battleships/: admin.py  forms.py  models.py  views.py
gameserver/battleships/templates/battleships/: base.html  dashboard.html  frontpage.html  login.html  signup.html
gameserver/gameserver/: asgi.py  settings.py  urls.py  wsgi.py
