[tool.poetry]
name = "Django Battleships"
version = "0.1.0"
description = "Making a game server for battleships"
authors = ["AsquaredWsquared <76879959+AsquaredWsquared@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
